# e_commerce

./: Dockerfile_tasks  Dockerfile_user  README.md  debezium.yml  docker-compose.yml  kafka.yml  pyproject.toml
backend_pipeline_message/: alembic.ini  user_dockercompose.yml
backend_pipeline_message/task_management/: alembic.ini  main.py  start.sh
backend_pipeline_message/task_management/alembic/: env.py
backend_pipeline_message/task_management/alembic/versions/: 2a160ed1fdc3_create_table_tasks.py  3b689f2862c6_add_description_and_complete_column.py  6a8ef7cf5e08_add_role_column.py  a7c8e752927c_delete_unique_attr_from_user_id_task_.py  a7d39b5bf8d4_add_default_to_task_id.py
backend_pipeline_message/task_management/etl/: kafka_etl.py
backend_pipeline_message/task_management/graphql_schemas/: controller.py  core.py
backend_pipeline_message/task_management/model/: tasks.py
backend_pipeline_message/task_management/routes/: tasks.py
backend_pipeline_message/task_management/schemas/: user.py
backend_pipeline_message/user/: .database.env  .secret.env  alembic.ini  main.py
backend_pipeline_message/user/alembic/: env.py
backend_pipeline_message/user/alembic/versions/: 1cf4eb146527_create_tables.py
backend_pipeline_message/user/crud/: user.py
backend_pipeline_message/user/models/: create_tables.py  user.py
backend_pipeline_message/user/routers/: auth.py  user.py
backend_pipeline_message/user/schemas/: user.py
backend_pipeline_message/user_api/: main.py  start.sh
backend_pipeline_message/user_api/alembic/versions/: 44efbf04d78f_create_table_user.py  (+2 more)
backend_pipeline_message/user_api/crud/: user.py
backend_pipeline_message/user_api/models/: create_tables.py  user.py
backend_pipeline_message/user_api/routers/: auth.py  user.py
backend_pipeline_message/user_api/schemas/: user.py
